Older methods
On github there is no methdos getFirst, removeFirst for ArrayList